objects/Solution__c.object
<CustomObject>
    <description>To store solutions identified in action plans, detailing strategies and actions to overcome obstacles and achieve goals.</description>
    <fields>
        <fullName>ClientActionPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Action Plan</label>
        <referenceTo>ClientActionPlan__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Obstacle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obstacle</label>
        <referenceTo>Obstacle__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SolutionDefaultValues__c</fullName>
        <label>Solution Default Values</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increase income</fullName>
                </value>
                <value>
                    <fullName>Reduce debt</fullName>
                </value>
                <value>
                    <fullName>Improve credit score</fullName>
                </value>
                <value>
                    <fullName>Increase savings</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SolutionDetails__c</fullName>
        <label>Solution Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SolutionSubject__c</fullName>
        <label>Solution Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Solution</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Solution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>